// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should consistently handle a style prop 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "flex": 1,
        "paddingTop": 0,
      },
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <Text>
    testing
  </Text>
</RCTSafeAreaView>
`;

exports[`should pass snapshot tests 1`] = `
<RCTSafeAreaView
  style={
    Array [
      Object {
        "flex": 1,
        "paddingTop": 0,
      },
      undefined,
    ]
  }
>
  <Text>
    testing
  </Text>
</RCTSafeAreaView>
`;
